add_definitions(-std=c++14)

find_package(JPEG REQUIRED)
include_directories(${JPEG_INCLUDE_DIR})

configure_file(cat_ascii.pgm cat_ascii.pgm COPYONLY)
configure_file(cat_brut.pgm cat_brut.pgm COPYONLY)
configure_file(cat_ascii.ppm cat_ascii.ppm COPYONLY)
configure_file(cat_brut.ppm cat_brut.ppm COPYONLY)
configure_file(little_cat.ppm little_cat.ppm COPYONLY)
configure_file(chat.tga chat.tga COPYONLY)
configure_file(chanel.tga chanel.tga COPYONLY)
configure_file(chat010couleurs.tga chat010couleurs.tga COPYONLY)
configure_file(palette_bl.tga palette_bl.tga COPYONLY)
configure_file(palette_tl.tga palette_tl.tga COPYONLY)

add_executable(cpp_tp1 tp1.cpp Image.cpp GreyImage.cpp Toolbox.cpp)
add_executable(cpp_tp2 tp2.cpp Image.cpp ColorImage.cpp Toolbox.cpp)
add_executable(cpp_tp4 tp4.cpp Image.cpp ColorImage.cpp Toolbox.cpp)
target_link_libraries(cpp_tp2 ${JPEG_LIBRARIES})
target_link_libraries(cpp_tp4 ${JPEG_LIBRARIES})
